# Roughtime-interop-code

./: .gitignore  .gitmodules  README.md  pyproject.toml
etc/: permutation.yml  template_results.html
implementations/: docker-compose.yml  implementations.yml
implementations/butterfield/: Dockerfile  run.sh
implementations/cloudflare/: Dockerfile  run.sh
implementations/craggy/: Dockerfile  patch_gtest.patch  run.sh
implementations/node-roughtime/: Dockerfile  client.js  run.sh
implementations/pyroughtime/: Dockerfile  run.sh
implementations/roughenough/: Dockerfile  run.sh
implementations/roughly/: Dockerfile  run.py  run.sh
implementations/roughtimed/: Dockerfile  roughtimed.conf  run.sh
implementations/tannerryan-roughtime/: Dockerfile  run.sh
implementations/vroughtime/: Dockerfile  compile.sh  plummet.c  run.sh
plummet/: __init__.py  cli.py  template_results.html
tests/: __init__.py  test_cli.py
